[tool.poetry]
name = "desktop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "exit"
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
# Agrega aquí las dependencias necesarias, por ejemplo:
# flask = "^2.0.1"
# requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

