[tool.poetry]
name = "bot_webex_calling"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0"
webexteamssdk = "^1.5"  # Agrega la versión correcta que usas
requests = "^2.26"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


